src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>ActiveLiveAgentUser__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ActiveLiveAgentUser</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FinServ__Affiliations__c</fullName>
        <label>Affiliations</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>FinServ__AgeAsText__c</fullName>
        <formula>IF(
    ISBLANK(Birthdate),
    
    &apos;&apos;,

    IF(
        And(
            Month(Today()) &gt;= Month(Birthdate),
            Day(Today()) &gt;=  Day(Birthdate)
        ),

        TEXT(Year(Today())- Year(Birthdate)) &amp; &quot; &quot; &amp; &quot;years&quot; &amp; &quot; &quot; &amp; TEXT(Month(Today())-Month(Birthdate)) &amp; &quot; &quot; &amp; &quot;months&quot; &amp; &quot; &quot; &amp; TEXT(Day(Today())-Day(Birthdate)),
    
        IF(
            And(month(Today())&lt; month(Birthdate), Day(Today())&gt;= Day(Birthdate)),
        
            TEXT(Year(Today())-Year(Birthdate)-1) &amp; &quot; &quot; &amp; &quot;years&quot; &amp; &quot; &quot; &amp; TEXT(12 - Month(Birthdate)+month(Today())) &amp; &quot; &quot; &amp; &quot;months&quot; &amp; &quot; &quot; &amp; TEXT(Day(Today())-Day(Birthdate)),
    
            if(
                And( month(Today())&lt; month(Birthdate), Day(Today())&lt; Day(Birthdate)),

                (TEXT( (Year(Today())-Year(Birthdate)-1)) &amp; &quot; &quot; &amp; &quot;years&quot; &amp; &quot; &quot; &amp; TEXT((12 - Month(Birthdate)+month(Today())-1)) &amp; &quot; &quot; &amp; &quot;months&quot; ) &amp; &quot; &quot; &amp;
                    CASE(month(Birthdate),
                        2, TEXT( (28 - Day(Birthdate))+ Day(Today())),
                        4, TEXT( (30 - Day(Birthdate))+ Day(Today())),
                        6, TEXT( (30 - Day(Birthdate))+ Day(Today())),
                        9, TEXT( (30 - Day(Birthdate))+ Day(Today())),
                        11, TEXT( (30 - Day(Birthdate))+ Day(Today())),
                        TEXT( (31 - Day(Birthdate))+ Day(Today()))
                    ),
                if(
                    And( month(Today())= month(Birthdate), Day(Today())&lt; Day(Birthdate)),
                
                    (TEXT(Year(Today())- Year(Birthdate)-1)) &amp; &quot; &quot; &amp; &quot;years&quot; &amp; &quot; &quot; &amp; &quot;11&quot; &amp; &quot; &quot; &amp; &quot;months&quot; &amp; &quot; &quot; &amp;
                    CASE(month(Birthdate),
                        2, TEXT( (28 - Day(Birthdate))+ Day(Today())),
                        4, TEXT( (30 - Day(Birthdate))+ Day(Today())),
                        6, TEXT( (30 - Day(Birthdate))+ Day(Today())),
                        9, TEXT( (30 - Day(Birthdate))+ Day(Today())),
                        11, TEXT( (30 - Day(Birthdate))+ Day(Today())),
                        TEXT( (31 - Day(Birthdate))+ Day(Today()))
                    ),
                    (TEXT(Year(Today())- Year(Birthdate))) &amp; &quot; &quot; &amp; &quot;years&quot; &amp; &quot; &quot; &amp; TEXT(Month(Today())-Month(Birthdate)-1) &amp; &quot; &quot; &amp; &quot;months&quot; &amp; &quot; &quot; &amp;
                    CASE(month(Birthdate),
                        2, TEXT( (28 - Day(Birthdate))+ Day(Today())),
                        4, TEXT( (30 - Day(Birthdate))+ Day(Today())),
                        6, TEXT( (30 - Day(Birthdate))+ Day(Today())),
                        9, TEXT( (30 - Day(Birthdate))+ Day(Today())),
                        11, TEXT( (30 - Day(Birthdate))+ Day(Today())),
                        TEXT( (31 - Day(Birthdate))+ Day(Today()))
                    )
                )
            )
        )
    ) &amp; &quot; &quot; &amp; &quot;days&quot;
)</formula>
        <label>Age As Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FinServ__Age__c</fullName>
        <formula>if(And(Month(Today())&gt;= month(Birthdate), Day(Today()) &gt;=  Day(Birthdate)),
Year(Today())- Year(Birthdate) +
(Month(Today())-Month(Birthdate))/12,
if(And(month(Today())&lt; month(Birthdate), Day(Today())&gt;= Day(Birthdate)),
Year(Today())-Year(Birthdate)-1 +
(12 - Month(Birthdate)+month(Today()))/12,
if(And( month(Today())&lt; month(Birthdate), Day(Today())&lt; Day(Birthdate)),
(Year(Today())-Year(Birthdate)-1) + 
((12 - Month(Birthdate)+month(Today())-1))/12,
if(And( month(Today())= month(Birthdate), Day(Today())&lt; Day(Birthdate)),
(Year(Today())- Year(Birthdate)-1) + (11/12),
(Year(Today())- Year(Birthdate)) + 
(Month(Today())-Month(Birthdate)-1)/12))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FinServ__AnnualIncome__c</fullName>
        <label>Annual Income</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FinServ__BillingAddress__c</fullName>
        <description>Compound field for Billing Address.</description>
        <formula>if(ISBLANK(Account.BillingStreet), &quot;&quot; , Account.BillingStreet &amp; br() )&amp;
if(ISBLANK(Account.BillingCity), &quot;&quot; , Account.BillingCity &amp; &quot;, &quot; )&amp;
if(ISBLANK(Account.BillingState), &quot;&quot; , Account.BillingState &amp; &quot; &quot; )&amp;
if(ISBLANK(Account.BillingPostalCode), &quot;&quot; , Account.BillingPostalCode &amp; br())&amp;
if(ISBLANK(Account.BillingCountry), &quot;&quot; , Account.BillingCountry)</formula>
        <label>Billing Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FinServ__Citizenship__c</fullName>
        <label>Citizenship</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FinServ__CommunicationPreferences__c</fullName>
        <label>Communication Preferences</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Fraud:Phone</fullName>
                </value>
                <value>
                    <fullName>Fraud:Email</fullName>
                </value>
                <value>
                    <fullName>Fraud:SMS</fullName>
                </value>
                <value>
                    <fullName>Promotions:Phone</fullName>
                </value>
                <value>
                    <fullName>Promotions:Email</fullName>
                </value>
                <value>
                    <fullName>Promotions:SMS</fullName>
                </value>
                <value>
                    <fullName>Balance Activities:Phone</fullName>
                </value>
                <value>
                    <fullName>Balance Activities:Email</fullName>
                </value>
                <value>
                    <fullName>Balance Activities:SMS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FinServ__ContactPreference__c</fullName>
        <label>Contact Preference</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Phone</fullName>
                </value>
                <value>
                    <fullName>Mobile</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FinServ__CountryOfBirth__c</fullName>
        <label>Country Of Birth</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>FinServ__Countries</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>FinServ__CountryOfResidence__c</fullName>
        <description>Country of residence.</description>
        <label>Country</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FinServ__CreatedFromLead__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Created from Lead</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FinServ__CurrentEmployer__c</fullName>
        <label>Current Employer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FinServ__CustomerTimezone__c</fullName>
        <label>Customer Timezone</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pacific/Kiritimati</fullName>
                </value>
                <value>
                    <fullName>Pacific/Enderbury</fullName>
                </value>
                <value>
                    <fullName>Pacific/Tongatapu</fullName>
                </value>
                <value>
                    <fullName>Pacific/Chatham</fullName>
                </value>
                <value>
                    <fullName>Asia/Kamchatka</fullName>
                </value>
                <value>
                    <fullName>Pacific/Auckland</fullName>
                </value>
                <value>
                    <fullName>Pacific/Fiji</fullName>
                </value>
                <value>
                    <fullName>Pacific/Norfolk</fullName>
                </value>
                <value>
                    <fullName>Pacific/Guadalcanal</fullName>
                </value>
                <value>
                    <fullName>Australia/Lord_Howe</fullName>
                </value>
                <value>
                    <fullName>Australia/Brisbane</fullName>
                </value>
                <value>
                    <fullName>Australia/Sydney</fullName>
                </value>
                <value>
                    <fullName>Australia/Adelaide</fullName>
                </value>
                <value>
                    <fullName>Australia/Darwin</fullName>
                </value>
                <value>
                    <fullName>Asia/Seoul</fullName>
                </value>
                <value>
                    <fullName>Asia/Tokyo</fullName>
                </value>
                <value>
                    <fullName>Asia/Hong_Kong</fullName>
                </value>
                <value>
                    <fullName>Asia/Kuala_Lumpur</fullName>
                </value>
                <value>
                    <fullName>Asia/Manila</fullName>
                </value>
                <value>
                    <fullName>Asia/Shanghai</fullName>
                </value>
                <value>
                    <fullName>Asia/Singapore</fullName>
                </value>
                <value>
                    <fullName>Asia/Taipei</fullName>
                </value>
                <value>
                    <fullName>Australia/Perth</fullName>
                </value>
                <value>
                    <fullName>Asia/Bangkok</fullName>
                </value>
                <value>
                    <fullName>Asia/Jakarta</fullName>
                </value>
                <value>
                    <fullName>Asia/Saigon</fullName>
                </value>
                <value>
                    <fullName>Asia/Rangoon</fullName>
                </value>
                <value>
                    <fullName>Asia/Dacca</fullName>
                </value>
                <value>
                    <fullName>Asia/Katmandu</fullName>
                </value>
                <value>
                    <fullName>Asia/Calcutta</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FinServ__EmailVerified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Email Verified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FinServ__EmployedSince__c</fullName>
        <description>Year when client started with current employer.</description>
        <label>Employed Since</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FinServ__Facebook__c</fullName>
        <label>Facebook</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>FinServ__FaxVerified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Fax Verified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FinServ__Gender__c</fullName>
        <label>Gender</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Female</fullName>
                </value>
                <value>
                    <fullName>Male</fullName>
                </value>
                <value>
                    <fullName>Decline to Specify</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FinServ__HomeOwnership__c</fullName>
        <label>Home Ownership</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Rent</fullName>
                </value>
                <value>
                    <fullName>Own</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FinServ__HomePhoneVerified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Home Phone Verified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FinServ__IndividualId__c</fullName>
        <description>Unique ID that relates this individual&apos;s contact record to its account record.</description>
        <formula>Account.FinServ__IndividualId__c</formula>
        <label>Individual ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FinServ__IndividualType__c</fullName>
        <description>Individual Type</description>
        <label>Individual Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Individual</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FinServ__LanguagesSpoken__c</fullName>
        <label>Languages Spoken</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FinServ__LastFourDigitSSN__c</fullName>
        <description>Last 4-Digits of SSN or Tax ID</description>
        <label>SSN/Tax ID (Last Four Digits)</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FinServ__LinkedIn__c</fullName>
        <label>LinkedIn</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>FinServ__MailingAddress__c</fullName>
        <description>Compound field for Mailing Address.</description>
        <formula>if(ISBLANK(MailingStreet),  &quot;&quot; , MailingStreet &amp; br()) &amp;
if(ISBLANK(MailingCity),  &quot;&quot; , MailingCity&amp; &quot;, &quot; ) &amp;
if(ISBLANK(MailingState),  &quot;&quot; , MailingState&amp; &quot; &quot; ) &amp;
if(ISBLANK(MailingPostalCode),  &quot;&quot; , MailingPostalCode &amp; br()) &amp;
if(ISBLANK(MailingCountry),  &quot;&quot; , MailingCountry)</formula>
        <label>Mailing Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FinServ__MaritalStatus__c</fullName>
        <label>Marital Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Single</fullName>
                </value>
                <value>
                    <fullName>Married</fullName>
                </value>
                <value>
                    <fullName>Separated</fullName>
                </value>
                <value>
                    <fullName>Divorced</fullName>
                </value>
                <value>
                    <fullName>Widowed</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FinServ__MarketingOptOut__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Marketing Opt-Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FinServ__MobileVerified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mobile Verified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FinServ__MostUsedChannel__c</fullName>
        <label>Most Used Channel</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Mobile</fullName>
                </value>
                <value>
                    <fullName>Web</fullName>
                </value>
                <value>
                    <fullName>Branch</fullName>
                </value>
                <value>
                    <fullName>Call Center</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FinServ__MotherMaidenName__c</fullName>
        <description>Mother&apos;s Maiden Name</description>
        <label>Mother&apos;s Maiden Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FinServ__NextLifeEvent__c</fullName>
        <label>Next Life Event</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Higher Education</fullName>
                </value>
                <value>
                    <fullName>Enter Workforce</fullName>
                </value>
                <value>
                    <fullName>Returning to Workforce</fullName>
                </value>
                <value>
                    <fullName>First Home Purchase</fullName>
                </value>
                <value>
                    <fullName>Children</fullName>
                </value>
                <value>
                    <fullName>Renovations</fullName>
                </value>
                <value>
                    <fullName>Moving</fullName>
                </value>
                <value>
                    <fullName>Critical Family Event</fullName>
                </value>
                <value>
                    <fullName>Promotion</fullName>
                </value>
                <value>
                    <fullName>Retirement</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FinServ__NumberOfChildren__c</fullName>
        <label>Number Of Children</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FinServ__NumberOfDependents__c</fullName>
        <description>Number of dependents.</description>
        <label>Number of Dependents</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FinServ__Occupation__c</fullName>
        <label>Occupation</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FinServ__OtherAddress__c</fullName>
        <description>Compound field for Other Address.</description>
        <formula>if(ISBLANK(OtherStreet), &quot;&quot; , OtherStreet &amp; br()) &amp;
if(ISBLANK(OtherCity), &quot;&quot; , OtherCity&amp; &quot;, &quot; ) &amp;
if(ISBLANK(OtherState), &quot;&quot; , OtherState&amp; &quot; &quot; ) &amp;
if(ISBLANK(OtherPostalCode), &quot;&quot; , OtherPostalCode &amp; br()) &amp;
if(ISBLANK(OtherCountry), &quot;&quot; , OtherCountry)</formula>
        <label>Other Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FinServ__PreferredName__c</fullName>
        <label>Preferred Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FinServ__PrimaryAddressIsBilling__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Designates Billing Address as the primary address.</description>
        <label>Primary Address (Billing)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FinServ__PrimaryAddressIsMailing__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Designates Mailing Address as the primary address.</description>
        <label>Primary Address (Mailing)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FinServ__PrimaryAddressIsOther__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Designates Other Address as the primary address.</description>
        <label>Primary Address (Other)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FinServ__PrimaryAddressIsShipping__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Designates Shipping Address as the primary address.</description>
        <label>Primary Address (Shipping)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FinServ__PrimaryCitizenship__c</fullName>
        <label>Primary Citizenship</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>FinServ__Countries</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>FinServ__PrimaryLanguage__c</fullName>
        <label>Primary Language</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>FinServ__Languages</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>FinServ__ReferredByContact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>External Referrer</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>My Referrals</relationshipLabel>
        <relationshipName>ContactContactReferrals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FinServ__ReferredByUser__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Internal Referrer</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.UserType</field>
                <operation>equals</operation>
                <value>Standard</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>ContactEmployeeReferrals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FinServ__ReferrerScore__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Referrer Score</description>
        <label>Referrer Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FinServ__SecondaryCitizenship__c</fullName>
        <label>Secondary Citizenship</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>FinServ__Countries</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>FinServ__SecondaryLanguage__c</fullName>
        <label>Secondary Language</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>FinServ__Languages</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>FinServ__ShippingAddress__c</fullName>
        <description>Concatenated shipping address field.</description>
        <formula>if(ISBLANK(Account.ShippingStreet), &quot;&quot; , Account.ShippingStreet &amp; br()) &amp;
if(ISBLANK(Account.ShippingCity), &quot;&quot; , Account.ShippingCity&amp; &quot;, &quot;)&amp;
if(ISBLANK(Account.ShippingState),  &quot;&quot; , Account.ShippingState&amp; &quot; &quot;)&amp;
if(ISBLANK(Account.ShippingPostalCode), &quot;&quot; , Account.ShippingPostalCode &amp; br())  &amp;
If(ISBLANK( Account.ShippingCountry), &quot;&quot; , Account.ShippingCountry)</formula>
        <label>Shipping Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FinServ__SourceSystemId__c</fullName>
        <externalId>true</externalId>
        <label>Source System ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FinServ__TaxBracket__c</fullName>
        <label>Tax Bracket</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>10%</fullName>
                </value>
                <value>
                    <fullName>15%</fullName>
                </value>
                <value>
                    <fullName>25%</fullName>
                </value>
                <value>
                    <fullName>28%</fullName>
                </value>
                <value>
                    <fullName>33%</fullName>
                </value>
                <value>
                    <fullName>35%</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FinServ__TaxId__c</fullName>
        <label>Tax ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FinServ__Twitter__c</fullName>
        <label>Twitter</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>FinServ__WeddingAnniversary__c</fullName>
        <description>Date of wedding anniversary.</description>
        <label>Wedding Anniversary</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>external_id__c</fullName>
        <description>used for datapacks</description>
        <label>external id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <listViews>
        <fullName>AllContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>BirthdaysThisMonth</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CONTACT.BIRTHDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.BIRTHDATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Birthdays This Month</label>
    </listViews>
    <listViews>
        <fullName>FinServ__Upcoming_Birthdays_Next_7_Days</fullName>
        <booleanFilter>(1 OR 2) AND 3</booleanFilter>
        <columns>FULL_NAME</columns>
        <columns>FinServ__Age__c</columns>
        <columns>CONTACT.BIRTHDATE</columns>
        <columns>CONTACT.ADDRESS2_STREET</columns>
        <columns>CONTACT.ADDRESS2_STATE</columns>
        <columns>CONTACT.ADDRESS2_ZIP</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CONTACT.BIRTHDATE</field>
            <operation>equals</operation>
            <value>NEXT_N_DAYS:7</value>
        </filters>
        <filters>
            <field>CONTACT.BIRTHDATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>CONTACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contact.FinServ__IndustriesIndividual</value>
        </filters>
        <label>Upcoming Birthdays (Next 7 Days)</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>FinServ__Upcoming_RMDs_Next_7_Days</fullName>
        <booleanFilter>1 AND 2 AND 3 AND 4 AND (5 OR 6)</booleanFilter>
        <columns>FULL_NAME</columns>
        <columns>FinServ__Age__c</columns>
        <columns>CONTACT.BIRTHDATE</columns>
        <columns>CONTACT.ADDRESS2_STREET</columns>
        <columns>CONTACT.ADDRESS2_STATE</columns>
        <columns>CONTACT.ADDRESS2_ZIP</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>FinServ__Age__c</field>
            <operation>lessThan</operation>
            <value>70.5</value>
        </filters>
        <filters>
            <field>FinServ__Age__c</field>
            <operation>greaterThan</operation>
            <value>70</value>
        </filters>
        <filters>
            <field>CONTACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contact.FinServ__IndustriesIndividual</value>
        </filters>
        <filters>
            <field>CONTACT.BIRTHDATE</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:90</value>
        </filters>
        <filters>
            <field>CONTACT.BIRTHDATE</field>
            <operation>lessThan</operation>
            <value>LAST_N_DAYS:82</value>
        </filters>
        <filters>
            <field>CONTACT.BIRTHDATE</field>
            <operation>greaterOrEqual</operation>
            <value>NEXT_N_DAYS:275</value>
        </filters>
        <label>Upcoming RMDs (Next 7 Days)</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <recordTypes>
        <fullName>FinServ__IndustriesBusiness</fullName>
        <active>true</active>
        <description>Contact data for an institution or a business account</description>
        <label>Business</label>
    </recordTypes>
    <recordTypes>
        <fullName>FinServ__IndustriesIndividual</fullName>
        <active>true</active>
        <description>Contact data for a retail client</description>
        <label>Individual</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>FinServ__BirthdateCannotBeInFuture</fullName>
        <active>true</active>
        <description>Check to see if Birthdate is in future</description>
        <errorConditionFormula>Birthdate &gt; Today()</errorConditionFormula>
        <errorMessage>Date of birth can&apos;t be in the future.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FinServ__CannotHaveMoreThanOnePrimaryAddress</fullName>
        <active>true</active>
        <description>Only one address can be designated as the primary address.</description>
        <errorConditionFormula>IF(IF(FinServ__PrimaryAddressIsMailing__c,1,0) + IF(FinServ__PrimaryAddressIsOther__c,1,0)+  IF(FinServ__PrimaryAddressIsBilling__c,1,0)+ IF(FinServ__PrimaryAddressIsShipping__c,1,0)&gt;1,true,false)</errorConditionFormula>
        <errorMessage>Only one address can be designated as the primary address.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FinServ__ContactCannotBeAssociatedToHousehold</fullName>
        <active>true</active>
        <description>Check to see if contact is associated directly to household</description>
        <errorConditionFormula>Account.RecordType.DeveloperName=&apos;IndustriesHousehold&apos;</errorConditionFormula>
        <errorMessage>Can&apos;t associate a lead or contact to a household account.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FinServ__IndividualCannotHaveMoreThanOneContact</fullName>
        <active>false</active>
        <description>Error message when adding more than one contact to an individual account</description>
        <errorConditionFormula>1!=1</errorConditionFormula>
        <errorMessage>The selected account has an Individual record type and can&apos;t have additional contacts associated with it</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FinServ__NonPortalUserReferrer</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
                NOT(ISBLANK(FinServ__ReferredByUser__c)),
                NOT(ISPICKVAL(FinServ__ReferredByUser__r.UserType, &apos;Standard&apos;))
            )</errorConditionFormula>
        <errorDisplayField>FinServ__ReferredByUser__c</errorDisplayField>
        <errorMessage>Internal referrers must be internal Salesforce users.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FinServ__NotAllowingConversionFromIndividual</fullName>
        <active>false</active>
        <errorConditionFormula>1!=1</errorConditionFormula>
        <errorMessage>The Individual record type can&apos;t be changed</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FinServ__NotAllowingConversionToIndividual</fullName>
        <active>false</active>
        <description>Not allowing changing the record type of &quot;non-Individual&quot; to &quot;Individual&quot; record type</description>
        <errorConditionFormula>1!=1</errorConditionFormula>
        <errorMessage>The record type can&apos;t be changed to Individual.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FinServ__SingleReferredByEntryByRecord</fullName>
        <active>true</active>
        <errorConditionFormula>AND( 
            ISBLANK(Account.FinServ__ConversionDateTime__c), 
            AND( 
                NOT(ISBLANK(FinServ__ReferredByUser__c)), 
                NOT(ISBLANK(FinServ__ReferredByContact__c)) 
            ) 
        )</errorConditionFormula>
        <errorDisplayField>FinServ__ReferredByContact__c</errorDisplayField>
        <errorMessage>Enter an internal referrer or an external referrer. You can list only one referrer for each referral.</errorMessage>
    </validationRules>
</CustomObject>